objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup user to manage this campaign member</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Times_Opened__c</fullName>
        <inlineHelpText># of times opened when the files is imported, is not live</inlineHelpText>
        <label># Times Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>